src/test/ui/span/borrowck-let-suggestion-suffixes.stderr
error[E0597]: `young[..]` does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:12:14
   |
LL |     v2.push(&young[0]);      // statement 4
   |              ^^^^^^^^ borrowed value does not live long enough
...
LL | }
   | - `young[..]` dropped here while still borrowed
   |
   = note: values in a scope are dropped in the opposite order they are created

error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:19:14
   |
LL |     v3.push(&id('x'));           // statement 6
   |              ^^^^^^^ - temporary value dropped here while still borrowed
   |              |
   |              temporary value does not live long enough
...
LL | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:29:18
   |
LL |         v4.push(&id('y'));
   |                  ^^^^^^^ - temporary value dropped here while still borrowed
   |                  |
   |                  temporary value does not live long enough
...
LL |     }                       // (statement 7)
   |     - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error[E0597]: borrowed value does not live long enough
  --> $DIR/borrowck-let-suggestion-suffixes.rs:40:14
   |
LL |     v5.push(&id('z'));
   |              ^^^^^^^ - temporary value dropped here while still borrowed
   |              |
   |              temporary value does not live long enough
...
LL | }
   | - temporary value needs to live until here
   |
   = note: consider using a `let` binding to increase its lifetime

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0597`.
